✅ Endpoint /api/users/me funcionando con DTO y cursos inscritos